crates/re_int_histogram/tests/snapshots/memory_test__bad_sparse.snap
---
source: crates/re_int_histogram/tests/memory_test.rs
assertion_line: 123
expression: "[format!(\"{:.1} B/entry, dense\", bytes_per_element(N, 1)),\n        format!(\"{:.1} B/entry, sparseness: 1M\",\n            bytes_per_element(N, 1_000_000)),\n        format!(\"{:.1} B/entry, sparseness: 2M\",\n            bytes_per_element(N, 2_000_000)),\n        format!(\"{:.1} B/entry, sparseness: 3M\",\n            bytes_per_element(N, 3_000_000)),\n        format!(\"{:.1} B/entry, sparseness: 5M\",\n            bytes_per_element(N, 5_000_000)),\n        format!(\"{:.1} B/entry, sparseness: 8M\",\n            bytes_per_element(N, 8_000_000)),\n        format!(\"{:.1} B/entry, sparseness: 13M\",\n            bytes_per_element(N, 13_000_000))]"
---
[
    "9.6 B/entry, dense",
    "146.5 B/entry, sparseness: 1M",
    "78.4 B/entry, sparseness: 2M",
    "27.5 B/entry, sparseness: 3M",
    "45.8 B/entry, sparseness: 5M",
    "73.2 B/entry, sparseness: 8M",
    "119.0 B/entry, sparseness: 13M",
]
