crates/re_int_histogram/tests/snapshots/memory_test__binary_sparse.snap
---
source: crates/re_int_histogram/tests/memory_test.rs
assertion_line: 166
expression: "sparse_bytes_per_element(1_000_000, 1_000_000)"
---
30.933952
