crates/re_int_histogram/tests/snapshots/memory_test__btree_dense.snap
---
source: crates/re_int_histogram/tests/memory_test.rs
assertion_line: 102
expression: dense_bytes_per_element(1_000_000)
---
26.285088
