crates/re_int_histogram/tests/snapshots/memory_test__btree_sparse.snap
---
source: crates/re_int_histogram/tests/memory_test.rs
assertion_line: 104
expression: "sparse_bytes_per_element(1_000_000, 1_000_000)"
---
26.285088
