crates/re_int_histogram/tests/snapshots/memory_test__tree2.snap
---
source: crates/re_int_histogram/tests/memory_test.rs
assertion_line: 107
expression: "[format!(\"{:.1} B/entry, dense\", bytes_per_entry(N, 1)),\n        format!(\"{:.1} B/entry, spacing: 1M\", bytes_per_entry(N, 1_000_000)),\n        format!(\"{:.1} B/entry, spacing: 2M\", bytes_per_entry(N, 2_000_000)),\n        format!(\"{:.1} B/entry, spacing: 3M\", bytes_per_entry(N, 3_000_000)),\n        format!(\"{:.1} B/entry, spacing: 5M\", bytes_per_entry(N, 5_000_000)),\n        format!(\"{:.1} B/entry, spacing: 8M\", bytes_per_entry(N, 8_000_000)),\n        format!(\"{:.1} B/entry, spacing: 13M\",\n            bytes_per_entry(N, 13_000_000))]"
---
[
    "18.0 B/entry, dense",
    "30.9 B/entry, spacing: 1M",
    "30.9 B/entry, spacing: 2M",
    "25.8 B/entry, spacing: 3M",
    "21.5 B/entry, spacing: 5M",
    "30.9 B/entry, spacing: 8M",
    "27.9 B/entry, spacing: 13M",
]
